switch to using RegionManipulator lib and start making differ

--- a/build.gradle
+++ b/build.gradle
@@ -2,22 +2,10 @@ plugins {
     id 'java'
 }
 
-ext {
-    //dependency things
-    gsonVersion = "2.8.5"
-    junitVersion = "4.12"
-    lombokVersion = "1.18.20"
-    porklibVersion = "0.5.4-SNAPSHOT"
-}
-
 group 'com.github.thelampgod'
 version '1.0-SNAPSHOT'
 
 repositories {
-    maven {
-        name = "DaPorkchop_"
-        url = "https://maven.daporkchop.net/"
-    }
     mavenCentral()
 }
 
@@ -27,19 +15,7 @@ configurations {
 }
 
 dependencies {
-    shade "com.google.code.gson:gson:$gsonVersion"
-
-    shade "net.daporkchop.lib:http:$porklibVersion"
-    shade "net.daporkchop.lib:logging:$porklibVersion"
-    shade "net.daporkchop.lib:minecraft-worldscanner:$porklibVersion"
-    shade "net.daporkchop.lib:reflection:$porklibVersion"
-
-    testCompile "junit:junit:$junitVersion"
-
-    compileOnly "org.projectlombok:lombok:$lombokVersion"
-    testCompileOnly "org.projectlombok:lombok:$lombokVersion"
-    annotationProcessor "org.projectlombok:lombok:$lombokVersion"
-    testAnnotationProcessor "org.projectlombok:lombok:$lombokVersion"
+    shade 'br.com.gamemods:region-manipulator:2.0.0'
 }
 
 
@@ -51,7 +27,7 @@ jar {
     } {
         exclude "META-INF/**"
         exclude sourceSets.main.output.asFileTree.collect {
-            return it.getPath().split("java/main").last()
+            return it.getPath().split("java/main/").last()
         }
     }
 
