--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ configurations {
 }
 
 dependencies {
+    //modified to work with entities region files also
     shade project(":region-manip")
 //    shade 'br.com.gamemods:region-manipulator:2.0.0'
 }
